# kairos

./: .travis.yml  Cargo.toml  README.md  build.rs  rustfmt.toml
.builds/: debian-legacyrust.yml  debian.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: block-fixup.yml  ci.yml
doc/: language.md
examples/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
src/: error.rs  grammar.rustpeg  indicator.rs  iter.rs  lib.rs  matcher.rs  parser.rs  result.rs  timetype.rs  util.rs
src/parser/: iterator.rs  mod.rs  timetype.rs
