[package]
name = "kairos"
version = "0.4.0"
edition = "2021"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "A library on top of chrono to calculate times and dates ergonomically"

categories  = [ "date-and-time" ]
keywords    = ["time", "calc", "parser"]
readme      = "README.md"
license     = "MPL-2.0"
repository    = "https://git.beyermatthi.as/kairos"

[dependencies]
chrono = "0.4"
nom = "7"
iso8601 = "0.6"
thiserror = "1"

filters = { version  = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.11"
log        = "0.4"

[features]
default = []
with-filters = [ "filters" ]

